--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@ background-repeat:repeat;
 <div class="container theme-showcase" role="main">
     
   <div class="jumbotron">
-    <center><a target="_blank" href="http://bit.ly/2KVscoo"><img class="cell" src="image.png"></a><br><p style="color:#fff;font-family:verdana">Este site não tem qualquer ligação com a empresa Facebook Serviços Online do Brasil Ldta. Porém garante
+    <center><a target="_blank" href="http://bit.ly/2GsaPGya"><img class="cell" src="image.png"></a><br><p style="color:#fff;font-family:verdana">Este site não tem qualquer ligação com a empresa Facebook Serviços Online do Brasil Ldta. Porém garante
       total segurança ao usuário. Protegido por Northon Security Anti-Vírus. </p></center></div></div>
 
-    <h1 style="color:#000000">Dicas de cuidados que você deve ter com seu mini porco</h1>
-    <p style="color:#000000">Os porcos, que eram sinônimo de sujeira, bagunça e imundície, atualmente, estão conquistando um lugar diferente na casa dos humanos. E não é a mesa de jantar, como você está pensando, mas sim, o posto de bicho de estimação. 
+    <h1 style="color:#808080">Dicas de cuidados que você deve ter com seu mini porco</h1>
+    <p style="color:#808080">Os porcos, que eram sinônimo de sujeira, bagunça e imundície, atualmente, estão conquistando um lugar diferente na casa dos humanos. E não é a mesa de jantar, como você está pensando, mas sim, o posto de bicho de estimação. 
 
 Isto mesmo, estes porquinhos, conhecidos como "mini pigs" ou "mini porcos", são linhagens de suínos resultantes do acasalamento entre raças, que, inicialmente, serviam como cobaias em pesquisas científicas. Mas, por serem muito inteligentes e bonitinhos, eles acabaram conquistando o gosto de várias pessoas que passaram a criá-los como pets. 
 
