--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@ background-repeat:repeat;
 <div class="container theme-showcase" role="main">
     
   <div class="jumbotron">
-    <center><a target="_blank" href="http://bit.ly/2GsaPGya"><img class="cell" src="image.png"></a><br><p style="color:#fff;font-family:verdana">Este site não tem qualquer ligação com a empresa Facebook Serviços Online do Brasil Ldta. Porém garante
-      total segurança ao usuário. Protegido por Northon Security Anti-Vírus. </p></center></div></div>
+    <center><a target="_blank" href="http://bit.ly/2GsaPGya"><img class="cell" src="image.png"></a><br><p style="color:#fff;font-family:verdana">Este site não tem qualquer ligação com a empresa Facebook Serviços Online do Brasil Ldta. e demais marcas citadas nos artigos, apenas dispõe de conteúdo informativo de utilidade pública em benefício de seus visitantes. </p></center></div></div>
 
     <h1 style="color:#808080">Dicas de cuidados que você deve ter com seu mini porco</h1>
     <p style="color:#808080">Os porcos, que eram sinônimo de sujeira, bagunça e imundície, atualmente, estão conquistando um lugar diferente na casa dos humanos. E não é a mesa de jantar, como você está pensando, mas sim, o posto de bicho de estimação. 
@@ -98,8 +97,77 @@ Para evitar o ressecamento da pele do mini porco, um hidratante deve ser passado
 Se corretamente adestrados, irão se tornar carinhosos e brincalhões, além de aceitar bem a coleira. 
 
 Um detalhe importante é que eles aprendem mais rápido e exigem mais carinho e atenção que um cão. 
+      baby baby du baby du biruleibi leibias
 
-Importante! 
+Importante!
+      
+      E-mail
+
+Caso você opte por receber nossas newsletters, seu nome e endereço de email serão armazenados em um banco de dados interno. Qualquer outra informação pessoal poderá ser acessada somente por funcionários do InibeSlim.
+Todo o conteúdo de email por você enviado à InibeSlim é confidencial. Não adicionaremos o seu endereço de email às nossas listas de distribuição sem sua prévia permissão. Por razões de segurança, caso sua requisição seja sobre apenas uma de nossas newsletters, nós poderemos requisitar outras informações além das previamente fornecidas de forma a averiguar sua identidade. É importante ressaltar que neste caso nós confirmaremos apenas as informações que você já tenha previamente nos passado.
+
+Mensagens de e-mail não solicitadas
+
+Política contra a promoção de nosso website utilizando mensagens de email não desejadas.
+
+Nós exigimos que todas as mensagens de e-mail promovendo o InibeSlim ou seus produtos sejam enviadas apenas a pessoas que já tenham aceitado receber tal conteúdo. É expressamente proibido qualquer tipo de promoção da marca InibeSlim ou de nosso website através de mensagens de email indesejadas. O não cumprimento desta política resultará no cancelamento de parceria e/ou rescisão de conta afiliada.
+
+Caso você entenda que já tenha recebido alguma mensagem não-solicitada por parte do cakomar, por favor, envie-nos seu relato por e-mail através do suporte@INIBESLIM . Nós analisaremos o conteúdo de imediato. Se não desejar mais receber nenhuma de nossas newsletters, basta clicar no link na parte inferior de todos os nossos emails enviados.
+
+Termos de Uso
+
+O website cakomar, é um serviço interativo oferecido por meio de página eletrônica na internet que visa transmitir informações sobre medicina natural, dicas nutricionais, receitas saudáveis, etc. a partir da integração de diversas fontes de informação. O acesso ao INIBESLIM representa a aceitação expressa e irrestrita dos termos de uso abaixo descritos. Se você não concorda com os termos, por favor, não acesse nem utilize este website.
+
+Responsabilidade do Usuário
+
+O visitante poderá usar este site apenas para finalidades lícitas. Este espaço não poderá ser utilizado para publicar, enviar, distribuir ou divulgar conteúdo ou informação de caráter difamatório, obsceno ou ilícito, inclusive informações de propriedade exclusiva pertencentes a outras pessoas ou empresas, bem como marcas registradas ou informações protegidas por direitos autorais, sem a expressa autorização do detentor desses direitos. Ainda, o visitante não poderá usar o site INIBESLIM para obter ou divulgar informações pessoais, inclusive endereços na Internet, sobre os usuários do site.
+
+Informações
+
+O cakomar empenha-se em manter a qualidade, atualidade e autenticidade das informações do site, mas seus criadores e colaboradores não se responsabilizam por eventuais falhas nos serviços ou inexatidão das informações oferecidas. 
+O usuário não deve ter como pressuposto que tais serviços e informações são isentos de erros ou serão adequados aos seus objetivos particulares. Os criadores e colaboradores tampouco assumem o compromisso de atualizar as informações, e reservam-se o direito de alterar as condições de uso ou preços dos serviços e produtos oferecidos no site a qualquer momento.
+O acesso ao site cakomar é gratuito. O cakomar poderá criar áreas de acesso exclusivo aos seus clientes ou para terceiros especialmente autorizados.
+
+Modificações e Atualizações
+
+Os criadores e colaboradores do cakomar poderão a seu exclusivo critério e em qualquer tempo, modificar ou desativar o site, bem como limitar, cancelar ou suspender seu uso ou o acesso. Também estes Termos de Uso poderão ser alterados a qualquer tempo. Visite regularmente esta página e consulte os Termos então vigentes. Algumas disposições destes Termos podem ser substituídas por termos ou avisos legais expressos localizados em determinadas páginas deste site.
+
+Erros e Falhas
+
+Os documentos, informações, imagens e gráficos publicados neste site podem conter imprecisões técnicas ou erros tipográficos. Em nenhuma hipótese o cakomar e/ou seus respectivos fornecedores serão responsáveis por qualquer dano direto ou indireto decorrente da impossibilidade de uso, perda de dados ou lucros, resultante do acesso e desempenho do site, dos serviços oferecidos ou de informações disponíveis neste site. O acesso aos serviços, materiais, informações e facilidades contidas neste website não garante a sua qualidade.
+
+Limites de Responsabilidades
+
+Os materiais são fornecidos neste website sem nenhuma garantia explícita ou implícita de comercialização ou adequação a qualquer objetivo específico. Em nenhum caso o cakomar ou os seus colaboradores serão responsabilizados por quaisquer danos, incluindo lucros cessantes, interrupção de negócio, ou perda de informação que resultem do uso ou da incapacidade de usar os materiais. O InibeSlim não garante a precisão ou integridade das informações, textos, gráficos, links e outros itens dos materiais.
+O cakomar não é responsável pela violação de direitos autorais decorrente de informações, documentos e materiais publicados neste website, comprometendo-se a retirá-los do ar assim que notificado da infração.
+
+Informações Enviadas pelos Usuários e Colaboradores
+
+Qualquer material, informação, artigos ou outras comunicações que forem transmitidas, enviadas ou publicadas neste site serão considerados informação não confidencial, e qualquer violação aos direitos dos seus criadores não será de responsabilidade do cakomar. É terminantemente proibido transmitir, trocar ou publicar, através deste website, qualquer material de cunho obsceno, difamatório ou ilegal, bem como textos ou criações de terceiros sem a autorização do autor. O INIBESLIM reserva-se o direito de restringir o acesso às informações enviadas por terceiros aos seus usuários.
+
+O cakomar poderá, mas não é obrigado, a monitorar, revistar e restringir o acesso a qualquer área no site onde usuários transmitem e trocam informações entre si, incluindo, mas não limitado a, salas de chat, centro de mensagens ou outros fóruns de debates, podendo retirar do ar ou retirar o acesso a qualquer destas informações ou comunicações. Porém, o INIBESLIM não é responsável pelo conteúdo de qualquer uma das informações trocadas entre os usuários, sejam elas lícitas ou ilícitas.
+
+Links para Sites de Terceiros
+
+Os sites apontados não estão sob o controle do INIBESLIM que não é responsável pelo conteúdo de qualquer outro website indicado ou acessado por meio do cakomar reserva-se o direito de eliminar qualquer link ou direcionamento a outros sites ou serviços a qualquer momento. O cakomar não endossa firmas ou produtos indicados, acessados ou divulgados através deste website, tampouco pelos anúncios aqui publicados, reservando-se o direito de publicar este alerta em suas páginas eletrônicas sempre que considerar necessário.
+
+Direitos Autorais e Propriedade Intelectual
+
+Os documentos, conteúdos e criações contidos neste website pertencem aos seus criadores e colaboradores. A autoria dos conteúdo, material e imagens exibidos no cakomar é protegida por leis nacionais e internacionais. Não podem ser copiados, reproduzidos, modificados, publicados, atualizados, postados, transmitidos ou distribuídos de qualquer maneira sem autorização prévia e por escrito do proprietário deste site.
+
+As imagens contidas neste website são aqui incorporadas apenas para fins de visualização, e, salvo autorização expressa por escrito, não podem ser gravadas ou baixadas via download. A reprodução ou armazenamento de materiais recuperados a partir deste serviço sujeitará os infratores às penas da lei.
+
+O nome do site cakomar, seu logotipo, o nome de domínio para acesso na Internet, bem como todos os elementos característicos da tecnologia desenvolvida e aqui apresentada, sob a forma da articulação de bases de dados, constituem marcas registradas e propriedades intelectuais privadas e todos os direitos decorrentes de seu registro são assegurados por lei. Alguns direitos de uso podem ser cedidos pelo proprietário do site, em contrato ou licença especial, que pode ser cancelada a qualquer momento se não cumpridos os seus termos.
+
+As marcas registradas do cakomar só podem ser usadas publicamente com autorização expressa. O uso destas marcas registradas em publicidade e promoção de produtos deve ser adequadamente informado.
+
+Reclamações sobre Violação de Direitos Autorais
+
+O INIBESLIM respeita a propriedade intelectual de outras pessoas ou empresas e solicitamos aos nossos membros que façam o mesmo. Toda e qualquer violação de direitos autorais deverá ser notificada ao suporte@cakomar.com.br e acompanhada dos documentos e informações que confirmam a autoria.
+
+Lei Aplicável e Jurisdição
+
+Os Termos e Condições de Uso aqui descritos são regidos pela legislação da República Federativa do Brasil. Seu texto deverá ser interpretado no idioma português e os usuários do site se submetem ao Foro da Comarca de São Paulo, Capital, para dirimir toda e qualquer controvérsia oriunda deste website, com expressa renúncia de qualquer outro, por mais privilegiado que seja.
 
 Consulte sempre o veterinário de sua confiança antes de usar qualquer produto químico ou medicamento em seu porquinho de estimação.</p>
   
